@@ -132,6 +132,10 @@ https://github.com/elastic/beats/compare/v5.2.2...v5.3.0[View commits]
 
 - Add error handling to system process metricset for when Linux cgroups are missing from the kernel. {pull}3692[3692]
 - Add labels to the Docker healthcheck metricset output. {pull}3707[3707]
+- Make system process metricset honor the cpu_ticks config option. {issue}3590[3590]
+- Support common.Time in mapstriface.toTime() {pull}3812[3812]
+- Fixing panic on prometheus collector when label has , {pull}3947[3947]
+*Packetbeat*
 
 *Winlogbeat*
 
